Changes to signup page Signup.html as some extra divs Entry form had "submit" button outside table tag, that is why it was not aligned to the entry text Added some CSS to signuplogin.css to fix alignment of signup.html Browser complaining about autocomplete in form entries, added them. The eventlistener for signup form button should be outside the create account function. Eliminated script on signup.html, it is already in signup.js Added function to add user to storage.js Added function to get user accounts from storage in storage.js Updated createacct() function to verify user is not already registered in signup.js’

--- a/assets/css/signuplogin.css
+++ b/assets/css/signuplogin.css
@@ -2,3 +2,17 @@
 Login and signup CS styling
 */
 
+#main {
+    display:flex;
+    flex-direction: column;
+    /*background-color: red;*/
+}
+
+#signtitle {
+    background-color: green;
+
+}
+
+#entry {
+
+}
